# AI-story-narrator

./: .env.example  .gitignore  README.md  crew.py  plan.txt  pyproject.toml
ai_add_to_story/: agents.py  tasks.py
